# test-task

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: .env  main.py
src/adapters/db/: connection.py
src/adapters/db/migrations/alembic/: env.py
src/adapters/db/migrations/alembic/versions/: 3fd812d7a561_initial_migration.py
src/adapters/db/models/: user.py
src/adapters/db/repositories/: user_repositories.py
src/domain/user/entities/: user.py
src/infrastructure/db/: config.py  connection.py
src/infrastructure/db/alembic/: env.py
src/infrastructure/db/models/: task.py
src/interactors/user/: user_service.py
src/presentation/: main.py
src/presentation/api/: main.py
src/presentation/web_api/dependencies/: depends_stub.py
src/presentation/web_api/endpoints/: user.py
src/presentation/web_api/providers/abstract/: db.py  user.py
src/presentation/web_api/schemas/: user.py
tests/test_domain/test_entities/: test_task.py
