[tool.poetry]
name = "task-back"
version = "0.1.0"
description = ""
authors = ["Husein Naimov <huseinnaimov72@gmail.com>"]
readme = "README.md"
packages = [{include = "task_back"}]

[tool.poetry.dependencies]
python = "3.11.7"
aiohttp = "^3.9.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
aiohttp-swagger = {extras = ["performance"], version = "^1.0.16"}
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
