[tool.poetry]
name = "task-back"
version = "0.1.0"
description = ""
authors = ["Husein Naimov <huseinnaimov72@gmail.com>"]
readme = "README.md"
packages = [{include = "task_back"}]

[tool.poetry.dependencies]
python = "3.11.7"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
